[package]
name = "quinn-file-transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
quinn = "0.11.8"
rcgen = "0.14.2"
rustls = "0.23.29"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"fmt",
	"json",
	"time",
] }
